--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="https://apower060.github.io/Aaron-Power/index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#specials">Solutions</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
