--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
              </a>
               </ul>  
               <ul>
-              <li><a href="#">Desktop Prototype</a></li>
-              <li><a href="#">Mobile Prototype</a></li>
+              <li><a href="https://xd.adobe.com/view/a21de359-5aed-4d26-bc8a-195bc01048e3-f74e/?fullscreen">Desktop Prototype</a></li>
+              <li><a href="https://xd.adobe.com/view/8289e8c4-2e50-4cc5-b462-bfc90b1dd75c-d7da/?fullscreen">Mobile Prototype</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
